<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyActivity">

    <TextView
        android:id="@+id/lobby_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/lobby_title_text_view"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/players_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/opponents_name_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_title_text_view" >
    </ListView>

    <TextView
        android:id="@+id/opponents_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/opponents_name_text_view"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/my_name_text_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/my_name_text_edit"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxy"
        android:inputType="textFilter"
        android:hint="@string/my_name_text_edit"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/ready_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ready_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ready_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="readyOnClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>